k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flowbridge-service
  namespace: backend
  labels:
    app.kubernetes.io/name: flowbridge-service
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: flowbridge-service
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
